trying Part IV again

--- a/content/post/2022-01-29-part-iv-cluster-themes-with-agglomerative-hierarchical-clustering/Part IV Hiearch.Rmd
+++ b/content/post/2022-01-29-part-iv-cluster-themes-with-agglomerative-hierarchical-clustering/Part IV Hiearch.Rmd
@@ -5,7 +5,7 @@ date: '2022-02-04'
 output: pdf_document
 categories: Analysis
 tags: Agglomerative Hierarchical Clustering
-draft: 
+draft: no
 ---
 
 ```{r packages, echo=F, warning=FALSE, message=FALSE, include=FALSE, results='hide'}
