after restarting R, adding to YAML of Part IV, it showed in Pane 4!

--- a/content/post/2022-02-04-part-iv-cluster-themes-with-agglomerative-hierarchical-clustering/Part IV Hiearch.Rmd
+++ b/content/post/2022-02-04-part-iv-cluster-themes-with-agglomerative-hierarchical-clustering/Part IV Hiearch.Rmd
@@ -5,8 +5,10 @@ date: '2022-02-04'
 categories:
   - Analysis
 tags:
-  - Agglomerative Hierarchical Clustering 
+  - Agglomerative Hierarchical Clustering
 output: pdf_document
+  html_document:
+    df_print: paged
 draft: no
 ---
 
