--- a/content/post/2022-02-04-part-1-concepts-quantitatively-compared-and-explored/Part I Themes.Rmd
+++ b/content/post/2022-02-04-part-1-concepts-quantitatively-compared-and-explored/Part I Themes.Rmd
@@ -67,12 +67,12 @@ knitr::kable(themeList, caption = '24 Themes', align = "c",
 
 This first series of five posts introduces the 24 Themes written about so far, the preliminary group of metrics that I gathered to quantify and analyze those Themes (Part II), and three methods of clustering the Themes using those metrics: k-means, hiearchical agglomerative, and Reinert clustering (Parts III, IV, and V).  
 
-[Part II](II) describes the metrics that I began using to analyze the centrality and complexity of each Theme.  A total of 20 metrics comprise the set for these first five posts; that set was whittled down from a larger group of candidate metrics based on my critique of their reliability (how representative, broad, and thoughtful is the data?) and objectivity (has someone else curated the metric).  Each metric can be understood as a numeric value of counts or ranks for a Theme term. For example, the number of results returned by a search with Google for a Theme term constitutes one element of one metric.  Eventually, having collected the metrics for this point in the project, I created a 24-by-20 data frame: the number of rows equal to the number of Themes (24) and the number of columns equal to the number of metrics (20).  An Excel spreadsheet would have the same dimensions.
+[Part II](https://themesfromart.com/post/2022-01-26-part-ii-metrics-that-suggest-centrality-or-complexity-of-a-concept/partiimetrics/) describes the metrics that I began using to analyze the centrality and complexity of each Theme.  A total of 20 metrics comprise the set for these first five posts; that set was whittled down from a larger group of candidate metrics based on my critique of their reliability (how representative, broad, and thoughtful is the data?) and objectivity (has someone else curated the metric).  Each metric can be understood as a numeric value of counts or ranks for a Theme term. For example, the number of results returned by a search with Google for a Theme term constitutes one element of one metric.  Eventually, having collected the metrics for this point in the project, I created a 24-by-20 data frame: the number of rows equal to the number of Themes (24) and the number of columns equal to the number of metrics (20).  An Excel spreadsheet would have the same dimensions.
 
-[Part III](III) introduces the first effort to analyze the Theme metrics with the goal to see how closely Themes associate with each other based on the metrics. Quantitative association between Themes marks my first step toward being able to classifying concepts along the dimensions of centrality and complexity; if the data indicates no clear associations, then this research program is scuppered. The approach uses unsupervised clustering, with the first algorithm applying *k-means clustering*. The results of identifying each Theme's closest other Theme starts what I refer to as the "pairings data set."  The pairings data set for k-means clustering would (ideally) have a minimum of 12 pairs if each Theme were closest to one other Theme, which was in turn closest to it.  But it turns out that k-means produces more than 12 pairs, since A may be closest to B, but B may be closest to C.
+[Part III](https://themesfromart.com/post/2022-02-04-part-iii-find-similar-themes-with-k-means-clustering/part-iii-kmeans/) introduces the first effort to analyze the Theme metrics with the goal to see how closely Themes associate with each other based on the metrics. Quantitative association between Themes marks my first step toward being able to classifying concepts along the dimensions of centrality and complexity; if the data indicates no clear associations, then this research program is scuppered. The approach uses unsupervised clustering, with the first algorithm applying *k-means clustering*. The results of identifying each Theme's closest other Theme starts what I refer to as the "pairings data set."  The pairings data set for k-means clustering would (ideally) have a minimum of 12 pairs if each Theme were closest to one other Theme, which was in turn closest to it.  But it turns out that k-means produces more than 12 pairs, since A may be closest to B, but B may be closest to C.
 
-With [Part IV](IV), we deploy another clustering methodology and add another set of closest-themes to the pairings data set.  In that post we use *aggregative hierarchical clustering* to determine for each Theme which Theme is most similar to it, meaning which Theme (or combined themes) the hierarchical clustering algorithm merges each Theme with first. 
+With [Part IV](https://themesfromart.com/post/2022-02-04-part-iv-cluster-themes-with-agglomerative-hierarchical-clustering/part-iv-hiearch/), we deploy another clustering methodology and add another set of closest-themes to the pairings data set.  In that post we use *aggregative hierarchical clustering* to determine for each Theme which Theme is most similar to it, meaning which Theme (or combined themes) the hierarchical clustering algorithm merges each Theme with first. 
 
-Finally, in [Part V](V) we apply a third clustering methodology, *Rainert text clustering*. This clustering method analyzes the text of the posts about Themes rather than the metrics data set.  Once that algorithm has identified the closest Theme to another theme, because we have 24 Themes, our pairings data set has reached a minimum of a dozen "closest-Theme" pairs for each of the three techniques, and we can start drawing very preliminary conclusions about why Themes group the way they do.  
+Finally, in [Part V](https://themesfromart.com/post/2022-02-04-cluster-themes-with-reinert-textual-data-clustering/part-v-reinert/) we apply a third clustering methodology, *Rainert text clustering*. This clustering method analyzes the text of the posts about Themes rather than the metrics data set.  Once that algorithm has identified the closest Theme to another theme, because we have 24 Themes, our pairings data set has reached a minimum of a dozen "closest-Theme" pairs for each of the three techniques, and we can start drawing very preliminary conclusions about why Themes group the way they do.  
 
 As I add more Themes and modify the set of metrics (dropping, adding or modifying them), I plan to write more analytic posts that extend the investigations of this project.  I primarily use the R programming language and would be pleased to provide my code and data to anyone who asks for them by emailing me: [Rees(at)ReesMorrison(dot).com](rees@reesmorrison.com). Later posts will elaborate on the construct of  Themes, such as whether they are representative or whether the terms chosen for the Themes make sense, as well as on the metrics, such as methodological challenges and decisions.  Meanwhile, I will introduce additional software methodologies that can identify closest-Theme pairs. As that pairings data set grows, more patterns should appear, and the preliminary conclusions should solidify or elaborate.  My roadmap as of this writing for publishing more analytic posts appears at the end of [Part V](V). 
