--- a/content/post/2022-02-04-cluster-themes-with-reinert-textual-data-clustering/Part V Reinert.Rmd
+++ b/content/post/2022-02-04-cluster-themes-with-reinert-textual-data-clustering/Part V Reinert.Rmd
@@ -67,9 +67,9 @@ The algorithm splits the DTM into two clusters by maximizing the Chi-squared dis
 * from the resulting clusters' binary matrices, terms are selected based on their frequency and on a contingency coefficient minimum value^[A measure of association based on chi-square. The value ranges between 0 and 1, with 0 indicating no association between the text (row) and term (column) variables and values close to 1 indicating a high degree of association between the variables.]; and  
 * the largest of the two resulting clusters is then split with the same algorithm (hence, this is divisive hierarchical clustering) until it reaches the chosen number of clusters or a maximum of nine.
 
-According to the calculations of the rainette package, the strongest associations (the highest Chi-squared values) are between Night and Sleep (almost 1100, in Cluster 4). But any conclusions drawn from this exercise are unreliable because more text cleaning should precede the clustering. The next time I deploy the Reinert text clustering method I will standardize (lemmatize) the Theme variants, such as converting "dancing" to "dance" and adjust plurals, such as "soldiers" to "soldier."
+According to the calculations of the rainette package, the strongest associations (the highest Chi-squared values) are between Night and Sleep (almost 1,100, in Cluster 4). But any conclusions drawn from this exercise are unreliable because more text cleaning should precede the clustering. The next time I deploy the Reinert text clustering method I will standardize (lemmatize) the Theme variants, such as converting "dancing" to "dance" and adjust plurals, such as "soldiers" to "soldier."
 
-The plot below displays the maximum of nine clusters that the algorithm can handle.  The length of the bars visible behind the 10 terms that most represent a cluster correspond to the Chi-squared value, sorted in descending order.  The "n = " row tells how many Themes comprise that cluster; for example, four Themes make up "Cl. 2".  The small dendrogram atop the cluster table visualizes the divisive, top-down methodology.
+The plot below displays nine clusters, a number that I selected mostly for readability of the plots.  The length of the bars visible behind the 10 terms that most represent a cluster correspond to the Chi-squared value, sorted in descending order.  The "n = " row tells how many Themes comprise that cluster; for example, four Themes make up "Cluster 2".  The small dendrogram atop the cluster table visualizes the divisive, top-down methodology.
 
 ```{r rainette, message=FALSE, echo=FALSE, warnings=FALSE}
 # read tidytext file, postWords, created in Themes/BlogNLPWriting.Rmd, with results saved in Themes as .xlsx.  I created PostCombo and then did tidytext to break out all the words
@@ -79,40 +79,33 @@ postWords <- readxl::read_xlsx(path = "C:/Users/Rees Morrison/Documents/R/Projec
 rainDFM <- postWords %>% group_by(Theme, word) %>% summarise(count = n()) %>% 
   tidytext::cast_dfm(., document = Theme, term = word, value = count)
 
+# install.packages("rainette", repos = "https://juba.r-universe.dev")  # Julien Barnier email 2/6
+
 library(rainette)
-# rainClus <- rainette(rainDFM, k = 5, min_segment_size = 5, doc_id = "Theme")
-rainClus <- rainette::rainette(rainDFM, k = 18, doc_id = "Theme")
-
-rainCut <- cutree_rainette(hres = rainClus, k = 9)
-
 library(quanteda)
 library(quanteda.textstats)
-rainStats <- rainette_stats(groups = rainCut, dtm = rainDFM, measure = c("chi2"), n_terms = 10, show_negative = TRUE, max_p = 0.05)
+
+rainClus <- rainette(rainDFM, k = 9)
+
+# rainClus <- rainette(rainDFM, k = 9, min_segment_size = 5, doc_id = "Theme")
+
+# rainClus <- rainette(dtm = rainDFM, k = 9, min_segment_size = 5, doc_id = rainDFM@docvars$docid_)
+
+# rainClus <- rainette(rainDFM, k = 9, min_segment_size = 5, doc_id = rainDFM@docvars[1]) 
+
+rainette_plot(res = rainClus, dtm = rainDFM, k = 9, type = "bar", n_terms = 10, free_scales = TRUE, measure = "chi2", show_negative = "FALSE", text_size = 8, show_na_title = FALSE, cluster_label = "Cluster", keyness_plot_xlab = "") 
 
 rainDF <- data.frame(C1 = rainStats[[1]][1:2], C2 = rainStats[[2]][1:2], C3 = rainStats[[3]][1:2], C4 = rainStats[[4]][1:2], C5 = rainStats[[5]][1:2], C6 = rainStats[[6]][1:2], C7 = rainStats[[7]][1:2], C8 = rainStats[[8]][1:2], C9 = rainStats[[9]][1:2])
 
 colnames(rainDF) <- str_remove_all(string = colnames(rainDF), pattern = "\\.feature")
 colnames(rainDF) <- str_remove_all(string = colnames(rainDF), pattern = "\\.chi2")
 
-rainette_plot(res = rainClus, dtm = rainDFM, k = 9, type = "bar", n_terms = 10, free_scales = TRUE, measure = "chi2", show_negative = "FALSE", text_size = 8) 
-  # labs(title = "Rainert Text Clustering")
-
 ```
 
-In a different visualization of the same clustering determination, the next plot presents with a "wordcloud" style, where the size of the word matches its Chi-squared value relative to the cluster.  It shows only 8 key terms, for legibility.
+In a different visualization of the same clustering determination, the next plot presents a "wordcloud" style, where the size of the word matches its Chi-squared value relative to the cluster.  It shows only eight key terms, for legibility.
 
 ```{r rainettePlot2}
-rainCloud <- rainette_plot(res = rainClus, dtm = rainDFM, k = 9, type = "cloud", n_terms = 8, free_scales = FALSE, measure = "chi2", text_size = 7) 
-
-rainCloud
-```
-
-```{r gtablecoerce}
-library("ggplotify")
-rainCloud.gg <- as.ggplot(rainCloud) + 
-  labs(x = "New", y = NULL, title = "Reinert Text Clustering")
-
-rainCloud.gg
+rainette_plot(res = rainClus, dtm = rainDFM, k = 9, type = "cloud", n_terms = 8, free_scales = FALSE, measure = "chi2", text_size = 7, show_na_title = FALSE, cluster_label = "Cluster", keyness_plot_xlab = "") 
 
 ```
 
@@ -120,7 +113,7 @@ rainCloud.gg
 
 Once the closest pairs were obtained by k-means clustering, agglomerative hierarchical clustering, and Reinert text clustering, I combined them into a dataframe. The first inquiry was whether any Theme is closest to any other Theme more than once (or even by all three algorithms).  Each letter pair in column "Two" of the table below tells us that two algorithms found that pair of Themes to be closest, e.g., Birds and Chance (both A), Bridges and Rivers (both B).  The "One" column tells how many other Themes were also identified for that Theme as closest.  So, for example, Dancing paired twice with Wind (both marked with D in column "Two") and with four other Themes -- the "4" in column "One."  The Themes in column "Single Closest Themes" had no pair, only single instances of closest Themes.  Thus, Money was "closest" to seven Themes, according to column "Single."
 
-Bear in mind that my method of picking closest Themes from the agglomerative hiearchical clustering (Part IV)[IV] yielded multiple "closest" Themes as I tied each agglomerated Theme to each of the Themes already in a unit (if that were the case).  In the series of posts to come, I will refine my method and thereby reduce the number of pairings. \
+Bear in mind that my method of picking closest Themes from the agglomerative hiearchical clustering [Part IV](https://themesfromart.com/post/2022-02-04-part-iv-cluster-themes-with-agglomerative-hierarchical-clustering/part-iv-hiearch/) yielded multiple "closest" Themes as I tied each agglomerated Theme to each of the Themes already in a unit (if that were the case).  In the series of posts to come, I will refine my method and thereby reduce the number of pairings. \
 
 ```{r cluscombo, message=FALSE, echo=FALSE, warnings=FALSE}
 
