--- a/content/post/2022-05-03-surveysaskemailaddresses/SurvAskEmail.Rmd
+++ b/content/post/2022-05-03-surveysaskemailaddresses/SurvAskEmail.Rmd
@@ -10,19 +10,19 @@ tags:
   - law departments
   - lawyers
   - legal vendors
-draft: yes
+draft: no 
 ---
 
 You should ask for the **email address** of the person responding to your survey on behalf of a law firm, law department or legal vendor.  As to the order of that question, place it as one of the first questions because otherwise people who spend time slogging through the questionnaire might not want to find at the end that you want them to identify themselves, that they are not **anonymous**.   [Whether you make the question a **required** question raises other issues beyond the scope of this section.]
 
 To be sure, some respondents might not wish to divulge their email address.  They do not want to be **spammed** with mailings or have their address peddled.  It would also mean that they would not be able to receive the report you produce, and it raises suspicions that their answers might be **fraudulent**, or put more genteelly, not be as accurate or complete as the answers of those who put their name to their response.  Typically, **partial answers** come from people who choose not to leave their email address.
 
-It is a good practice to add an **instruction** to the question asking for email addresses: “We will use the email address only to send you your report or to inquire about a possible mistake with an answer.”  Clearly, when someone puts in an email address, the respondent is no longer anonymous.
+It is a good practice to add an **instruction** to the question asking for email addresses: “We will use the email address only to send you your report or to inquire about a possible mistaken answer.”  Clearly, when someone puts in an email address, the respondent is no longer anonymous.
 
 With the email address, you can send them the final **report**.  After all, they are probably taking part to learn the aggregate results.  Without an email address you cannot reciprocate.
-Before that, you can reach out to the person if there is if you need to.  For example, in one compensation survey I led, a respondent entered “$11,000” for a base salary.  Realizing that figure was too low, I wrote and confirmed that the figure that was entered was missing a zero; it should have been $110,000.  Other times, the respondent left several important questions unanswered.
+Before that, you can reach out to the person if there is if you need to.  For example, in one compensation survey I led, a respondent entered “\$11,000” for a base salary.  Realizing that figure was too low, I wrote and confirmed that the figure that was entered was missing a zero; it should have been \$110,000.  Other times, the respondent left several important questions unanswered.
 
-Furthermore, with email addresses, since they are unique, you can describe in your report how **representative** of the total population is your survey sample.  Assuming you have gathered **demographic information** such as level, practice, location, or level, you can produce those demographic breakdowns of participants.  Then, too, you might enrich your survey demographics with **supplemental information** from an external source; Human Resources might allow you to include age or gender.
+Furthermore, with email addresses, since they are unique, you can describe in your report how **representative** of the total population is your survey sample.  Assuming you have gathered **demographic information** such as level, practice, location, or level, you can produce those demographic breakdowns of participants.  Then, too, you might enrich your survey demographics with **supplemental information** from an external source; as an example, Human Resources might allow you to include age or gender or AmLaw 100 data might be available.
 
 You may also want an email address to be able to identify organizations that have taken part.  If so, you should ask for the business email of the person rather than their personal email.  Software can easily separate the text after the “@” symbol and you can match that text to the full name of the organization.
 
