--- a/content/post/2022-05-07-savvy-surveys-recategorize-other-responses/SurvRecategorizeOther.Rmd
+++ b/content/post/2022-05-07-savvy-surveys-recategorize-other-responses/SurvRecategorizeOther.Rmd
@@ -16,7 +16,9 @@ Whether the multiple-choice selections are arrayed on the screen or live in a **
 
 So, “Other” responses don’t fit the selection set, according to the respondents.  However, for various reasons you may want to **recategorize** those responses into an existing selection. 
 
-Consider an illustration.  One multiple-choice question on your technology adoption survey asks lawyers “Why do you feel you are not adept with the software?”  Following are selections that could reasonably account for the feeling: “Inadequate or poorly used training time,” “Infrequent use,” “Lack of user manuals,” “I’m a troglodyte Luddite,” and “Other.”  What happens if only two or three people choose “Other”?  One of them writes in the text box, “I don’t want to waste my time learning.”  You could recategorize that answer as “Inadequate or poorly used training time.”  It’s unfortunate if a respondent clicks “Other” but writes nothing in the text box.  Perhaps you can write to that person and learn what they had in mind.    But back to our illustration.  If instead the respondent writes that “The app does not behave well on my Linux operating system,” you have no reasonably applicable selection to assign to it.  It truly is a concept outside the scope of the multiple choices provided.
+Consider an illustration.  One multiple-choice question on your technology adoption survey asks lawyers “Why do you feel you are not adept with the software?”  Following are selections that could reasonably account for the feeling: “Inadequate or poorly used training time,” “Infrequent use,” “Lack of user manuals,” “I’m a troglodyte Luddite,” and “Other.”  What happens if only two or three people choose “Other”?  One of them writes in the text box, “I don’t want to waste my time learning.”  You could recategorize that answer as “Inadequate or poorly used training time.”
+
+It’s unfortunate if a respondent clicks “Other” but writes nothing in the text box.  Perhaps you can write to that person and learn what they had in mind.    But back to our illustration.  If instead the respondent writes that “The app does not behave well on my Linux operating system,” you have no reasonably applicable selection to assign to it.  It truly is a concept outside the scope of the multiple choices provided.
 
 Recategorizing explanations in an “Other” text box  into the most similar of the given selections makes sense for the benefits explained below.  The problems with a handful of “Other” responses that are not recast arise when you try to plot data, analyze it, or write about it.  
 
